<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/colorGreenSpoty"
    tools:context=".MenuActivity">

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:textColor="@color/colorPrimary"
        android:background="@color/colorBlackButton"
        android:layout_height="wrap_content"
        android:text="@string/logout" />

    <TextView
        android:id="@+id/edtSession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:text="@string/password"
        tools:layout_editor_absoluteX="76dp"
        tools:layout_editor_absoluteY="115dp" />

    <Button
        android:id="@+id/btnJouer"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:textColor="@color/colorPrimary"
        android:background="@color/colorBlackButton"
        android:layout_height="wrap_content"
        android:text="@string/jouer" />

    <Button
        android:id="@+id/btnHistoriqueParties"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:textColor="@color/colorPrimary"
        android:background="@color/colorBlackButton"
        android:layout_height="wrap_content"
        android:text="@string/historiqueParties" />

    <Button
        android:id="@+id/btnClassementThemes"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorPrimary"
        android:background="@color/colorBlackButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/classementThemes" />
</LinearLayout>