<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/colorGreenSpoty"
    tools:context=".LoginActivity">

    <Button
        android:id="@+id/btnInscription"
        android:textColor="@color/colorPrimary"
        android:background="@color/colorBlackButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inscription" />

    <EditText
        android:id="@+id/edtMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:ems="10"
        android:layout_marginBottom="25dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:textColor="@color/colorPrimary"
        android:background="@color/colorBlackButton"
        android:layout_height="wrap_content"
        android:text="@string/seConnecter" />

</LinearLayout>